--- a/sysconfig/src/main/ui/src/assets/css/util/text.css
+++ b/sysconfig/src/main/ui/src/assets/css/util/text.css
@@ -2,6 +2,10 @@
     color: var(--pallete-text-aside);
 }
 
+.is-normal{
+    font-size: var(--text-size-normal);
+}
+
 .is-small {
     font-size: var(--text-size-little);
 }
