--- a/sysconfig/ui/src/assets/css/base/body.css
+++ b/sysconfig/ui/src/assets/css/base/body.css
@@ -1,6 +1,6 @@
 body {
     font-family: "Nunito Sans";
-    font-size: var(--text-size-little);
+    font-size: var(--text-size-normal);
     color: var(--pallete-text-main);
 }
 
