--- a/sysconfig/ui/src/assets/css/base/body.css
+++ b/sysconfig/ui/src/assets/css/base/body.css
@@ -28,3 +28,11 @@ select:-webkit-autofill:focus {
 ::-webkit-scrollbar-thumb {
     background-color: var(--pallete-color-black-3);
 }
+
+::-moz-selection {
+    background-color: var(--pallete-color-main-1);
+}
+
+::selection {
+    background-color: var(--pallete-color-main-1);
+}
