Adicionando tipo do agente

--- a/sysconfig/ui/src/assets/css/util/position.css
+++ b/sysconfig/ui/src/assets/css/util/position.css
@@ -8,6 +8,11 @@
     flex-direction: row;
 }
 
+.u-row-reverse {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
 .u-gap-1 {
     gap: var(--ratio-1);
 }
