--- a/sysconfig/ui/src/assets/css/base/body.css
+++ b/sysconfig/ui/src/assets/css/base/body.css
@@ -1,3 +1,8 @@
+@font-face {
+    src: url("@/assets/fonts/nunito-sans/NunitoSans-Regular.ttf");
+    font-family: 'Nunito Sans';
+}
+
 body {
     font-family: "Nunito Sans";
     font-size: var(--text-size-normal);
