Organizing components and folders

--- a/sysconfig/ui/src/assets/css/base/variable.css
+++ b/sysconfig/ui/src/assets/css/base/variable.css
@@ -3,6 +3,7 @@
     --pallete-color-black-2: rgb(39, 42, 45);
     --pallete-color-black-3: rgb(49, 54, 58);
     --pallete-color-black-4: rgb(62, 65, 70);
+    --pallete-color-black-5: rgb(79, 82, 87);
     --pallete-color-main-1: rgb(45, 61, 189);
     --pallete-color-green-1: #0c8a0c;
     --pallete-color-green-2: #0da40d;
