Mind inspector improvement

--- a/sysconfig/ui/src/assets/css/base/variable.css
+++ b/sysconfig/ui/src/assets/css/base/variable.css
@@ -8,7 +8,7 @@
     --pallete-color-green-2: #0da40d;
     --pallete-color-red-1: #e11f1f;
     --pallete-color-red-2: #f63e3e;
-    --pallete-color-yellow-1: #d59312;
+    --pallete-color-yellow-1: #b67d0e;
     --pallete-color-yellow-2: #e7a10d;
     --pallete-text-main: rgb(200, 200, 200);
     --pallete-text-aside: rgb(131, 131, 131);
