--- a/sysconfig/ui/src/assets/css/base/body.css
+++ b/sysconfig/ui/src/assets/css/base/body.css
@@ -18,7 +18,8 @@ select:-webkit-autofill:focus {
 }
 
 ::-webkit-scrollbar {
-    width: 5px;
+    width: 6px;
+    height: 6px;
 }
 
 ::-webkit-scrollbar-track {
