--- a/sysconfig/ui/src/assets/css/base/variable.css
+++ b/sysconfig/ui/src/assets/css/base/variable.css
@@ -1,11 +1,11 @@
 :root {
     --pallete-color-black-1: rgb(29, 31, 33);
     --pallete-color-black-2: rgb(38, 40, 42);
-    --pallete-color-black-3: rgb(49, 54, 58);
-    --pallete-color-black-4: rgb(54, 59, 63);
+    --pallete-color-black-3: rgb(46, 50, 53);
+    --pallete-color-black-4: rgb(55, 60, 64);
     --pallete-color-main-1: rgb(45, 61, 189);
     --pallete-color-green-1: #0c8a0c;
-    --pallete-color-green-2: #0da40d;
+    --pallete-color-green-2: #0fbc0f;
     --pallete-color-red-1: #e11f1f;
     --pallete-color-red-2: #f63e3e;
     --pallete-color-yellow-1: #b67d0e;
